# AttysECG

./: .gitignore  LICENSE  README.md  build.gradle  gradle.properties  local.properties  logging.sh  settings.gradle
app/: app.iml~  build.gradle  proguard-rules.pro
app/release/: app-release.aab
app/src/main/: AndroidManifest.xml  AndroidManifest.xml~
app/src/main/cpp/: CMakeLists.txt  VrAttsECG_Framework.cpp  attysecg.c
app/src/main/java/tech/glasgowneuro/attysecg/: AttysECG.java  BeepGenerator.java  Constants.java  ECGLogger.java  ECGPlotFragment.java  ECG_rr_det.java  FIR_Filter.java  HRVOculus.java  HRVView.java  HRexplorer.java  HeartratePlotFragment.java  Highpass.java  IIR2Filter.java  IIRFilter.java  InfoView.java  LeadsView.java  ListAdapter.java  MainActivity.java  MatchedFilter.java  PPGPlotFragment.java  PrefsActivity.java  RealtimePlotView.java  Screensize.java  VectorPlotFragment.java  XYPlotFragment.java  ppgHistory.java
app/src/main/res/drawable-hdpi/: progress.xml
app/src/main/res/drawable-xxhdpi/: button.xml  dialogbox.xml
app/src/main/res/layout/: activity_hrexplorer.xml  activity_ppg_histroy.xml  adc_settings.xml  ecgplotfragment.xml  heartrateplotfragment.xml  history_item.xml  main_activity_layout.xml  ppgplotfragment.xml  preferences.xml  vectorplotfragment.xml  xyplotfragment.xml
app/src/main/res/layout-land/: main_activity_layout.xml  vectorplotfragment.xml
app/src/main/res/layout-v21/: activity_plot_window.xml
app/src/main/res/menu/: main_menu_attysecg.xml  main_menu_attysplot.xml
app/src/main/res/values/: array.xml  strings.xml  strings.xml~  styles.xml
app/src/main/res/xml/: preferences.xml  provider_paths.xml
docs/: README.md  index.html
ecg-plotting/python/: plot_ecg.py
ecg-plotting/web-browser/: README.md  index.html  plotecg.css
firj-release/: build.gradle  firj-release.aar
gradle/wrapper/: gradle-wrapper.properties
libs/: firj-release.aar
optimalRRdetParam/: README  ecg.tsv  optimal_iir_rr_det.py
plot-ecg/: index.html  main.js  plotecg.css  sample-ecg.tsv
plotecg/: README  index.html  main.js  plotecg.css
python/: README  README.md  plot_ecg.py
